tests/typecheck/should_fail/tcfail095.hs
{-# LANGUAGE MagicHash #-}

-- !!! Test top-level unboxed types

module ShouldFail where

import GHC.Base

x = 1#
